# grade_manager

./: .gitignore  CMakeLists.txt  README.md
src/: addeditwindow.ui  functions.cpp  functions.h  main.cpp  resultswindow.ui
src/functions/: functions.cpp  functions.h  importFiles.cpp  printTranscript.cpp
src/gui/: addeditwindow.ui  alertwindow.ui  confirmationwindow.ui  mainwindow.ui  resultswindow.ui
